--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/home-wallpaper.webp
+    - assets/anime-wallpaper.webp
+    - assets/movie-wallpaper.webp
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
